# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--dev@wikitravel.org--contrib/wix--mainline--0.1
#

2005-02-18 17:58:15 GMT Mark Jaroski <mark@geekhive.net>	
    Summary:
      Mediawiki 1.3.10 security token support, Wikitravel language support.
      Changed script name.
    Revision:
      wix--mainline--0.1--patch-14

    The Mediawiki 1.3.10 release added a security token which broke our
    ability to commit changes.  Mike Wesemann <mike@fhi-berlin.mpg.de>
    however kindly (and quickly) contributed a patch to fix this.

    Around the same time a change was made to the way language versions are
    handled in Wikipedia.  I've hacked the script to support this.  I
    should eventually fix the hacked version to add real support for any
    sort of URL.

    The name of the script has now been changed to mvs to avoid confusion
    with a project "Wix" which can be found on Source Forge.


2004-03-30 08:39:34 GMT	Mark Jaroski <mark@geekhive.net>	patch-13

    Summary:
      Added the rest of the modules for CPAN test
    Revision:
      wix--mainline--0.1--patch-13

    Apparently there are a couple more non-standard modules used here, so I
    just went ahead and made everything I've used a prereq.  I realise that
    this is probably overkill because some of these are in the standard
    distribution.  Oh well.

    modified files:
     ChangeLog Makefile.PL


2004-03-29 19:10:08 GMT	Mark Jaroski <mark@geekhive.net>	patch-12

    Summary:
      Added dependancy on Test::Differences to avoid CPAN test failure
    Revision:
      wix--mainline--0.1--patch-12

    This is a stop-gap to allow these tests to pass on the CPAN auto-test
    platforms.  At some point I plan to fix the test scripts to either use
    Test::Differences or not depending on its availablility.
    

    modified files:
     ChangeLog Makefile.PL t/wix.t


2004-03-25 19:13:00 GMT	Mark Jaroski <mark@geekhive.net>	patch-11

    Summary: